--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
             <div class="buttons">
 
                 <div class="google_button">
-                    <button><img src="Images/icons8-google-48.png">Log in with google</button>
+                    <button><img src="Images/icons8-google-48.png"><a id="decorate1" href="#">Log in with google</a></button>
                     
                 </div>
+             <div class="social">
                 <div class="twitter">
-                    <button><img src="Images/icons8-twitter-48.png" alt=""></button>
+                    <button><a id="decorate1" href="#"><img src="Images/icons8-twitter-48.png" alt="twitter png"></a></button>
                 </div>
                 <div class="facebook">
-                    <button><img src="Images/icons8-facebook-48.png" alt=""></button>
+                    <button><a id="decorate1" href="#"><img src="Images/icons8-facebook-48.png" alt="facebook png"></a></button>
                 </div>
+              </div>
             </div>
             <h3><span>or</span></h3>
             <div class="email">
@@ -53,7 +55,7 @@
                 <p>Login an account means you're okay with the <a id="decorate" href="">Terms of Service,Privacy Policy</a>  and our default  <a id="decorate"href="">Notification Settings.</a> </p>
             </div>
             <div class="login">
-                <button>Login</button>
+                <button>  <a id="decorate1" href="#">Login</a> </button>
             </div>
             <div class="end">
                 <p>This site is protected by reCAPTCHA and the google <a id="decorate" href="">Privacy Policy</a>  and the <a id="decorate" href="">Terms of Service apply</a> </p>
